[package]
name = "clams"
version = "0.0.13"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Clams help building shells"
repository = "https://github.com/lukaspustina/clams.git"
readme = "README.md"
license = "MIT"
keywords = ["shell", "cli"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[badges]
travis-ci = { repository = "lukaspustina/clams", branch = "master" }
codecov = { repository = "lukaspustina/clams", branch = "master", service = "github" }

[dependencies]
clams-derive = "^0.0.4"
colored = "^1.6"
error-chain = "^0.11"
log = "^0.4"
fern = { version = "^0.5", features = ["colored"] }
indicatif = "^0.9"
subprocess = "^0.1"
tail = "^0.3"
toml = "^0.4"

[dev-dependencies]
quickcheck = "^0.6"
serde = "^1.0"
serde_derive = "^1.0"
spectral = "^0.6"

