[package]
name = "clams"
version = "0.0.15"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Clams help building shells"
repository = "https://github.com/lukaspustina/clams.git"
readme = "README.md"
license = "MIT"
keywords = ["shell", "cli"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2018"

[badges]
travis-ci = { repository = "lukaspustina/clams", branch = "master" }
codecov = { repository = "lukaspustina/clams", branch = "master", service = "github" }

[dependencies]
clams-derive = "^0.0.5"
colored = "^1.6"
error-chain = "^0.12"
log = "^0.4"
fern = { version = "^0.5", features = ["colored"] }
indicatif = "^0.9"
subprocess = "^0.1"
tail = "^0.3"
toml = "^0.5"

[dev-dependencies]
quickcheck = "^0.6"
serde = { version = "^1", features = ["derive"] }
spectral = "^0.6"

